furl added to handlebars helpers

--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -1,10 +1,10 @@
 {{#extend "administration/administration"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/administration/school.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/administration/school.css' }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/administration/schools.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/administration/schools.js' }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
