--- a/views/files/search.hbs
+++ b/views/files/search.hbs
@@ -1,14 +1,14 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/files/files.css') }}"/>
-        <link rel="stylesheet" href="{{ furl('/styles/files/search.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/files/files.css' }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/files/search.css' }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/dropzone/dropzone.js') }}" type="text/javascript" defer></script>
-        <script src="{{ furl('/scripts/files.js') }}" type="text/javascript" defer></script>
-        <script src="{{ furl('/scripts/jquery.cookie.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/dropzone/dropzone.js' }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/files.js' }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/jquery.cookie.js' }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
