--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -1,12 +1,12 @@
 {{#content "styles" mode="append"}}
-    <link rel="stylesheet" href="{{ furl('/styles/homework/overview.css') }}"/>
-    <link rel="import" href="{{ furl('/vendor/m.e.i.n.e.l/circular-progress.html') }}">
+    <link rel="stylesheet" href="{{ furl '/styles/homework/overview.css' }}"/>
+    <link rel="import" href="{{ furl '/vendor/m.e.i.n.e.l/circular-progress.html' }}">
 {{/content}}
 {{#content "scripts" mode="append"}}
-    <script src="{{ furl('/vendor/webcomponents-lite-meinel.js') }}" defer></script>
-    <script src="{{ furl('/scripts/moment/moment.js') }}" defer></script>
-    <script src="{{ furl('/scripts/filter/custom-element-polyfill.js') }}" defer></script>
-    <script src="{{ furl('/scripts/filter/feathers-filter.js') }}" defer></script>
+    <script src="{{ furl '/vendor/webcomponents-lite-meinel.js' }}" defer></script>
+    <script src="{{ furl '/scripts/moment/moment.js' }}" defer></script>
+    <script src="{{ furl '/scripts/filter/custom-element-polyfill.js' }}" defer></script>
+    <script src="{{ furl '/scripts/filter/feathers-filter.js' }}" defer></script>
 {{/content}}
 {{#extend "homework/homework"}}
     {{#content "page"}}
