--- a/views/news/news.hbs
+++ b/views/news/news.hbs
@@ -1,5 +1,5 @@
 {{#extend "lib/loggedin"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/news/news.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/news/news.css' }}"/>
     {{/content}}
 {{/extend}}
