--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -1,11 +1,11 @@
 {{#extend "lib/default"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/partners.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/partners.js' }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/partner/partner.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/partner/partner.css' }}"/>
         <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css") }}/>
         <style>
             body {
