--- a/views/pwRecovery/pwrecovery.hbs
+++ b/views/pwRecovery/pwrecovery.hbs
@@ -1,11 +1,11 @@
 {{#extend "lib/default"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css') }}"/>
-        <link rel="stylesheet" href="{{ furl('/styles/authentication/login.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/authentication/home.css' }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/authentication/login.css' }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/pwrecovery.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/pwrecovery.js' }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "body"}}
