--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -1,11 +1,11 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/courses/course.css') }}"/>
-        <link rel="stylesheet" href="{{ furl('/styles/homework/homework.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/courses/course.css' }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/homework/homework.css' }}"/>
     {{/content}}
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/topic.js') }}" defer></script>
+        <script src="{{ furl '/scripts/topic.js' }}" defer></script>
     {{/content}}
 
     {{#content "page"}}
