--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -1,6 +1,6 @@
 {{#extend "lib/default"}} {{#content "styles" mode="append"}}
-<link rel="stylesheet" href="{{ furl('/styles/authentication/home.css') }}" /> {{/content}} {{#content "scripts" mode="append"}}
-<script src="{{ furl('/scripts/login.js') }}" type="text/javascript" defer></script>
+<link rel="stylesheet" href="{{ furl '/styles/authentication/home.css' }}" /> {{/content}} {{#content "scripts" mode="append"}}
+<script src="{{ furl '/scripts/login.js' }}" type="text/javascript" defer></script>
 {{/content}} {{#content "body"}} {{#embed "lib/header"}}{{/embed}}
 <div class="container">
     <div class="row">
