--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -1,9 +1,9 @@
 {{#extend "lib/default"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css') }}"/>
-        <link rel="stylesheet" href="{{ furl('/styles/partner/partner.css') }}"/>
-        <link rel="stylesheet" href="{{ furl('/styles/about/about.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/authentication/home.css' }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/partner/partner.css' }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/about/about.css' }}"/>
         <style>
             header a[href='/about']{
                 background-color: #f8a41b;
