--- a/views/administration/administration.hbs
+++ b/views/administration/administration.hbs
@@ -1,11 +1,11 @@
 {{#extend "lib/loggedin"}}
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/administration.js') }}" type="text/javascript" defer></script>
-        <script src="{{ furl('/scripts/tables.js') }}" type="text/javascript" defer></script>
-        <script src="{{ furl('/scripts/filter/custom-element-polyfill.js') }}" defer></script>
-        <script src="{{ furl('/scripts/filter/feathers-filter.js') }}" defer></script>
+        <script src="{{ furl '/scripts/administration.js' }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/tables.js' }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/filter/custom-element-polyfill.js' }}" defer></script>
+        <script src="{{ furl '/scripts/filter/feathers-filter.js' }}" defer></script>
     {{/content}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/lib/datetimepicker/jquery.datetimepicker.min.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/lib/datetimepicker/jquery.datetimepicker.min.css' }}"/>
     {{/content}}
 {{/extend}}
