--- a/views/administration/classes-edit.hbs
+++ b/views/administration/classes-edit.hbs
@@ -1,13 +1,13 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/administration/classes/edit.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/administration/classes/edit.js' }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/classes/classes.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/classes/classes.css' }}"/>
         <!-- dataprivacy is only used for .recap -->
-        <link rel="stylesheet" href="{{ furl('/styles/administration/dataprivacy.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/administration/dataprivacy.css' }}"/>
     {{/content}}
 
     {{#content "page"}}
