--- a/views/administration/courses.hbs
+++ b/views/administration/courses.hbs
@@ -1,7 +1,7 @@
 {{#extend "administration/administration"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/administration/course.css') }}"/>
-        <link rel="stylesheet" href="{{ furl('/styles/lib/spectrum/spectrum.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/administration/course.css' }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/lib/spectrum/spectrum.css' }}"/>
     {{/content}}
     {{#content "scripts" mode="append"}}
         <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
