--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -1,8 +1,8 @@
 {{#content "scripts" mode="append"}}
-    <script src="{{ furl('/scripts/administration/users_edit.js') }}" type="text/javascript" defer></script>
+    <script src="{{ furl '/scripts/administration/users_edit.js' }}" type="text/javascript" defer></script>
 {{/content}}
 {{#content "styles" mode="append"}}
-    <link rel="stylesheet" href="{{ furl('/styles/administration/users.css') }}"/>
+    <link rel="stylesheet" href="{{ furl '/styles/administration/users.css' }}"/>
 {{/content}}
 {{#extend "lib/loggedin"}}
     {{#content "page"}}
