--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -1,12 +1,12 @@
 {{#extend "lib/default"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/authentication/home.css' }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/login.js') }}" type="text/javascript" defer></script>
-        <script type="text/javascript" src="{{ furl('/vendor/mailchimp.js') }}" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
+        <script src="{{ furl '/scripts/login.js' }}" type="text/javascript" defer></script>
+        <script type="text/javascript" src="{{ furl '/vendor/mailchimp.js' }}" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
     {{/content}}
 
     {{#content "body"}}
