--- a/views/community/community_guest.hbs
+++ b/views/community/community_guest.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/default"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/authentication/home.css' }}"/>
         <style>
             header a[href='/community']{
                 background-color: #f8a41b;
