--- a/views/courses/courseGroup.hbs
+++ b/views/courses/courseGroup.hbs
@@ -1,15 +1,15 @@
 {{#extend "lib/loggedin"}} 
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/courses/course.css') }}" />
-        <link rel="stylesheet" href="{{ furl('/styles/homework/homework.css') }}" />
-        <link rel="stylesheet" href="{{ furl('/vendor/jquery/jquery-ui.css') }}" /> 
+        <link rel="stylesheet" href="{{ furl '/styles/courses/course.css' }}" />
+        <link rel="stylesheet" href="{{ furl '/styles/homework/homework.css' }}" />
+        <link rel="stylesheet" href="{{ furl '/vendor/jquery/jquery-ui.css' }}" /> 
     {{/content}} 
 
     {{#content "scripts" mode="append"}}
-    <script src="{{ furl('/scripts/jquery/jquery-ui.min.js') }}" type="text/javascript" defer></script>
-    <script src="{{ furl('/scripts/jquery/jquery.ui.touch-punch.js') }}" type="text/javascript" defer></script>
-    <script src="{{ furl('/scripts/courses.js') }}" type="text/javascript" defer></script> 
+    <script src="{{ furl '/scripts/jquery/jquery-ui.min.js' }}" type="text/javascript" defer></script>
+    <script src="{{ furl '/scripts/jquery/jquery.ui.touch-punch.js' }}" type="text/javascript" defer></script>
+    <script src="{{ furl '/scripts/courses.js' }}" type="text/javascript" defer></script> 
 
     {{/content}} 
 
