--- a/views/courses/edit-courseGroup.hbs
+++ b/views/courses/edit-courseGroup.hbs
@@ -1,15 +1,15 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/courses/course.css') }}"/>
-        <link rel="stylesheet" href="{{ furl('/styles/lib/datetimepicker/jquery.datetimepicker.min.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/courses/course.css' }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/lib/datetimepicker/jquery.datetimepicker.min.css' }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/jquery/jquery.datetimepicker.full.min.js') }}" type="text/javascript" defer></script>
-        <script src="{{ furl('/scripts/moment/moment.js') }}" type="text/javascript" defer></script>
-        <script src="{{ furl('/scripts/courses.js') }}" type="text/javascript" defer></script>
-        <script src="{{ furl('/scripts/coursesTimes.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/jquery/jquery.datetimepicker.full.min.js' }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/moment/moment.js' }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/courses.js' }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/coursesTimes.js' }}" type="text/javascript" defer></script>
     {{/content}}
 
 
