--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -1,10 +1,10 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/coursesOverview.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/coursesOverview.js' }}" type="text/javascript" defer></script>
     {{/content}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/courses/course.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/courses/course.css' }}"/>
     {{/content}}
 
     {{#content "page"}}
