--- a/views/courses/run-tool-local.hbs
+++ b/views/courses/run-tool-local.hbs
@@ -11,7 +11,7 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/tools/tools.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/tools/tools.css' }}"/>
     {{/content}}
 
     {{#content "page"}}
