--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -1,11 +1,11 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/dashboard/dashboard.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/dashboard/dashboard.css' }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script type="text/javascript" src="{{ furl('/scripts/dashboard.js') }}" defer></script>
+        <script type="text/javascript" src="{{ furl '/scripts/dashboard.js' }}" defer></script>
     {{/content}}
 
     {{#content "page"}}
