--- a/views/firstLogin/firstLoginExistingGeb14.hbs
+++ b/views/firstLogin/firstLoginExistingGeb14.hbs
@@ -1,13 +1,13 @@
 {{#extend "lib/simple"}}
   {{#content "scripts" mode="append"}}
-      <script src="{{ furl('/scripts/dataprivacy/dataprivacy.js') }}" type="text/javascript" defer></script>
-      <script src="{{ furl('/scripts/confetti/confetti.js') }}" type="text/javascript" defer></script>
-      <script src="{{ furl('/scripts/jquery/jquery.datetimepicker.full.min.js') }}" type="text/javascript" defer></script>
+      <script src="{{ furl '/scripts/dataprivacy/dataprivacy.js' }}" type="text/javascript" defer></script>
+      <script src="{{ furl '/scripts/confetti/confetti.js' }}" type="text/javascript" defer></script>
+      <script src="{{ furl '/scripts/jquery/jquery.datetimepicker.full.min.js' }}" type="text/javascript" defer></script>
   {{/content}}
   {{#content "styles" mode="append"}}
-      <link rel="stylesheet" href="{{ furl('/styles/administration/dataprivacy.css') }}"/>
-      <link rel="stylesheet" href="{{ furl('/styles/lib/confetti/confetti.css') }}"/>
-      <link rel="stylesheet" href="{{ furl('/styles/lib/datetimepicker/jquery.datetimepicker.min.css') }}"/>
+      <link rel="stylesheet" href="{{ furl '/styles/administration/dataprivacy.css' }}"/>
+      <link rel="stylesheet" href="{{ furl '/styles/lib/confetti/confetti.css' }}"/>
+      <link rel="stylesheet" href="{{ furl '/styles/lib/datetimepicker/jquery.datetimepicker.min.css' }}"/>
  {{/content}}
   {{#content "page"}}
     {{#embed "lib/forms/paginatedForm" sections=3 action="/firstLogin/submit" method="POST"}}
