--- a/views/firstLogin/firstLoginExistingUserUE14.hbs
+++ b/views/firstLogin/firstLoginExistingUserUE14.hbs
@@ -1,9 +1,9 @@
 {{#extend "lib/simple"}}
   {{#content "scripts" mode="append"}}
-      <script src="{{ furl('/scripts/dataprivacy/dataprivacy.js'0 }}" type="text/javascript" defer></script>
+      <script src="{{ furl '/scripts/dataprivacy/dataprivacy.js'0 }}" type="text/javascript" defer></script>
   {{/content}}
   {{#content "styles" mode="append"}}
-      <link rel="stylesheet" href="{{ furl('/styles/administration/dataprivacy.css') }}"/>
+      <link rel="stylesheet" href="{{ furl '/styles/administration/dataprivacy.css' }}"/>
  {{/content}}
   {{#content "page"}}
     {{#embed "lib/forms/paginatedForm" sections=3 action="/firstLogin/submit" method="POST"}}
