--- a/views/help/sso-faq.hbs
+++ b/views/help/sso-faq.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/help/help.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/help/help.css' }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
