--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -10,30 +10,30 @@
         <meta name="apple-mobile-web-app-title" content="{{theme.short_title}}">
         <meta name="theme-color" content="#b10438">
         <meta name="application-name" content="{{theme.short_title}}">
-        <link rel="mask-icon" href="{{ furl('/images/logo/safari-pinned-tab.svg') }}" color="#b10438">
-        <link rel="apple-touch-icon" href= "{{ furl('/images/logo/app-icon-512.png') }}">
-        <link rel="apple-touch-icon" sizes="120x120" href="{{ furl('/images/logo/app-icon-120.png') }}">
-        <link rel="apple-touch-icon" sizes="152x152" href="{{ furl('/images/logo/app-icon-152.png') }}">
-        <link rel="apple-touch-icon" sizes="167x167" href="{{ furl('/images/logo/app-icon-167.png') }}">
-        <link rel="apple-touch-icon" sizes="180x180" href="{{ furl('/images/logo/app-icon-180.png') }}">
-        <link rel="icon" type="image/png" sizes="48x48" href="{{ furl('/images/logo/favicon-48.png') }}">
-        <link rel="icon" type="image/png" sizes="32x32" href="{{ furl('/images/logo/favicon-32.png') }}">
-        <link rel="icon" type="image/png" sizes="16x16" href="{{ furl('/images/logo/favicon-16.png') }}">
-        <link rel="manifest" href="{{ furl('/images/manifest.json') }}">
+        <link rel="mask-icon" href="{{ furl '/images/logo/safari-pinned-tab.svg' }}" color="#b10438">
+        <link rel="apple-touch-icon" href= "{{ furl '/images/logo/app-icon-512.png' }}">
+        <link rel="apple-touch-icon" sizes="120x120" href="{{ furl '/images/logo/app-icon-120.png' }}">
+        <link rel="apple-touch-icon" sizes="152x152" href="{{ furl '/images/logo/app-icon-152.png' }}">
+        <link rel="apple-touch-icon" sizes="167x167" href="{{ furl '/images/logo/app-icon-167.png' }}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ furl '/images/logo/app-icon-180.png' }}">
+        <link rel="icon" type="image/png" sizes="48x48" href="{{ furl '/images/logo/favicon-48.png' }}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ furl '/images/logo/favicon-32.png' }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ furl '/images/logo/favicon-16.png' }}">
+        <link rel="manifest" href="{{ furl '/images/manifest.json' }}">
     {{/block}}
 
     {{#block "styles"}}
-        <link rel="preload" href="{{ furl('/fonts/ptsans/ptsans-regular.woff') }}" as="font" type="font/woff" crossorigin>
-        <link rel="preload" href="{{ furl('/fonts/ptsans/ptsans-bold.woff') }}" as="font" type="font/woff" crossorigin>
-        <link rel="preload" href="{{ furl('/fonts/ptsans/ptsans-italic.woff') }}" as="font" type="font/woff" crossorigin>
-        <link rel="preload" href="{{ furl('/vendor-optimized/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0') }}" as="font" type="font/woff" crossorigin>
-        <link rel="stylesheet" href="{{ furl('/fonts/ptsans/ptsans.css') }}" />
-        <link rel="stylesheet" href="{{ furl('/styles/lib/base.css') }}" />
+        <link rel="preload" href="{{ furl '/fonts/ptsans/ptsans-regular.woff' }}" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="{{ furl '/fonts/ptsans/ptsans-bold.woff' }}" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="{{ furl '/fonts/ptsans/ptsans-italic.woff' }}" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="{{ furl '/vendor-optimized/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0' }}" as="font" type="font/woff" crossorigin>
+        <link rel="stylesheet" href="{{ furl '/fonts/ptsans/ptsans.css' }}" />
+        <link rel="stylesheet" href="{{ furl '/styles/lib/base.css' }}" />
     {{/block}}
 
     {{#block "scripts"}}
         {{#embed "lib/sw-metrix"}}{{/embed}}
-        <script src="{{ furl('/scripts/all.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl '/scripts/all.js' }}" type="text/javascript" defer></script>
     {{/block}}
 
 </head>
