--- a/views/team/team_loggedin.hbs
+++ b/views/team/team_loggedin.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/team/team.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/team/team.css' }}"/>
     {{/content}}
 
     {{#content "page"}}
@@ -9,7 +9,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script type="text/javascript" src="{{ furl('/scripts/team.js'} }}" defer></script>
-        <script type="text/javascript" src="{{ furl('/vendor/vanilla-tilt.min.js') }}" defer></script>
+        <script type="text/javascript" src="{{ furl '/scripts/team.js'} }}" defer></script>
+        <script type="text/javascript" src="{{ furl '/vendor/vanilla-tilt.min.js' }}" defer></script>
     {{/content}}
 {{/extend}}
