--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -1,14 +1,14 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="{{ furl('/scripts/vendor-react.js') }}" defer></script>
-        <script src="{{ furl('/vendor/ckeditor/ckeditor.js') }}" defer></script>
-        <script src="{{ furl('/scripts/topicEdit.js') }}" defer></script>
-        <script src="{{ furl('/scripts/courses.js') }}" defer></script>
+        <script src="{{ furl '/scripts/vendor-react.js' }}" defer></script>
+        <script src="{{ furl '/vendor/ckeditor/ckeditor.js' }}" defer></script>
+        <script src="{{ furl '/scripts/topicEdit.js' }}" defer></script>
+        <script src="{{ furl '/scripts/courses.js' }}" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="{{ furl('/styles/courses/course.css') }}"/>
+        <link rel="stylesheet" href="{{ furl '/styles/courses/course.css' }}"/>
     {{/content}}
 
     {{#content "page"}}
