SC-301 improve "internal component" integration (#938)
* auto resize iFrames for internal components like we did it at /help.

* hide back button when display inline

* prevent scrollbar from appearing

* add resize eventListener + refactoring

* revert minor change

* make code more readable

* refactored help page to reuse new iFrame Code

* remove unused code

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -292,8 +292,19 @@ header {
     float:left;
 }
 
-.window-inline .content-wrapper {
-    padding: 20px !important;
+.window-inline {
+    .content-wrapper {
+        min-height: auto;
+        padding: 20px !important;
+    }
+    .content-min-height{
+        display: block;
+        flex: initial;
+    }
+    .mobile-nav-toggle,
+    .error-header-wrapper button.btn-primary {
+        display: none;
+    }
 }
 
 .content-min-height {
