About page contains video of Digital Gipfel 2018

--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -16,6 +16,31 @@
 
     <div class="section-partner">
         <h4>Pilotschulen</h4>
+        <video-player
+            configuration='{
+                "streams" : [
+                    {
+                    "hd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/WS_2018/DG_2018/DG_2017_12_03/hd/video.mp4",
+                    "sd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/WS_2018/DG_2018/DG_2017_12_03/sd/video.mp4",
+                    "poster": "https://www10-fms.hpi.uni-potsdam.de/vod/media/WS_2018/DG_2018/DG_2017_12_03/thumbnails/video-00-34-40.png",
+                    "hls": "https://www10-fms.hpi.uni-potsdam.de/vod/media/WS_2018/DG_2018/DG_2017_12_03/hls/video.m3u8"
+                    }
+                ],
+                "language": "de",
+                "theme" : "dark-red",
+                "loadFontAwesome" : false,
+                "videoAlignment" : "height",
+                "initialState": {
+                    "volume": 0.75,
+                    "quality" : "hls",
+                    "playbackRate" : 1.0
+                },
+                "videoPreload": false,
+                "userPreferences" : {
+                },
+                "slides": []
+            }'>
+        </video-player>
         <h5>Best Practice Schulen</h5>
         <div class="container">
             <div class="row">
