--- a/views/about/about_loggedin.hbs
+++ b/views/about/about_loggedin.hbs
@@ -10,5 +10,6 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
+        <script src="/scripts/video-player/load-video-player.js" type="text/javascript" defer></script>
     {{/content}}
 {{/extend}}
