Update test to find button

--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -100,7 +100,7 @@
 
     {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
         {{#content "body"}}
-            <div class="modal-footer">
+            <div class="modal-footer" id="modal-delete-homework-footer">
                 <button type="button" class="btn btn-secondary btn-close">
                     Abbrechen
                 </button>
