--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -112,12 +112,7 @@
                     <div class="row">
                         <div class="modal-footer w-100">
                             <div class="pull-left">
-                                {{#if schoolUsesLdap}}
-                                    <div class="col-sm-12 alert alert-info" style="text-align:left;">
-                                        <strong>Warum kann ich keine Lehrer und Schüler bearbeiten?</strong><br>
-                                        Die {{theme.short_title}} ist mit einem Identitätsmanagement deiner Schule, deines Schulträgers oder deines Landes synchronisiert, in dem die Daten der Lehrer und Schüler zentral verwaltet werden. Bitte nimm dort die gewünschten Änderungen vor. Auch Passwörter müssen in diesem System zurückgesetzt werden.
-                                    </div>
-                                {{else}}
+                                {{#unless schoolUsesLdap}}
                                     {{#ifCond isAdmin '|| !' editTeacher}}
                                         <button class="btn btn-secondary btn-pw" {{#if @root.hidePwChangeButton}} disabled title="Der Nutzer muss zuerst die Einverständniserklärung digital abschließen"{{/if}}>Passwort ändern</button>
                                         <button class="btn btn-secondary btn-delete">Benutzer löschen</button>
@@ -126,7 +121,7 @@
                                     {{#ifeq consentStatusIcon '<i class="fa fa-check consent-status double-check"></i><i class="fa fa-check consent-status double-check"></i>'}}disabled title="Der Nutzer ist bereits registriert"{{/ifeq}}>
                                         Persönlichen Einladungslink generieren
                                     </button>
-                                {{/if}}
+                                {{/unless}}
                             </div>
 
                             <button class="btn btn-secondary btn-cancel">
@@ -139,6 +134,9 @@
                         </div>
                     </div>
                 </form>
+                {{#if schoolUsesLdap}}
+                    {{> "lib/ldap-info"}}
+                {{/if}}
 
 
                 {{#embed "lib/components/modal-cancel" class="cancel-modal"}}{{/embed}}
