--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -69,8 +69,10 @@
     <p>
         Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
         <br />
-        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/system-engineer-dev-ops-mw.html" target="_blank">System Engineer Dev-Ops im Projekt HPI Schul-Cloud (m/w)</a>
+        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/frontend-web-developer-mwd-im-projekt-hpi-schul-cloud.html" rel="noopener" target="_blank">Frontend Web Developer (m/w/d) im Projekt HPI Schul-Cloud</a>
         <br />
-        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" target="_blank">Web Developer im Projekt HPI Schul-Cloud (m/w)</a>
+        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer (m/w/d) im Projekt HPI Schul-Cloud</a>
+		<br />
+        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/community-manager-mwd-im-projekt-hpi-schul-cloud.html" rel="noopener" target="_blank">Community Manager (m/w/d) im Projekt HPI Schul-Cloud</a>
     </p>
 </section>
