--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -76,6 +76,7 @@
                 {{> "lib/forms/password-hint" plaintext=false style="display: inline;"}}
             </span>
         </div>
+<!-- the following is hidden until the feature is fixed
 
         <div class="panel-group notification-div">
             <div class="panel panel-default">
@@ -135,6 +136,7 @@
                 </div>
             </div>
         </div>
+-->
 
         {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
             {{#content "body"}}
