--- a/views/oauth2/consent.hbs
+++ b/views/oauth2/consent.hbs
@@ -23,7 +23,7 @@
                                         <ul>
                                             {{#each scopes}}
                                                 <li>{{this}}</li>
-                                                <input type="hidden" name="allowed_scopes" value="{{this}}" />
+                                                <input type="hidden" name="grantScopes" value="{{this}}" />
                                             {{/each}}
                                         </ul>
                                     </div>
