only load piwik in production environment

--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -39,8 +39,9 @@
 </head>
 <body class="{{#if inline}}window-inline{{/if}}">
     {{#block "body"}}{{/block}}
-
-    {{#embed "lib/piwik"}}{{/embed}}
+    {{#if production }}
+      {{#embed "lib/piwik"}}{{/embed}}
+    {{/if}}
 
 </body>
 </html>
