--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>{{#if title}}{{title}} - {{/if}}{{theme.short_title}}</title>
+    <title>{{#if title}}{{title}} - {{/if}}{{theme.title}}</title>
 
     {{#block "meta"}}
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="#b10438">
-        <meta name="apple-mobile-web-app-title" content="{{theme.short_title}}">
+        <meta name="apple-mobile-web-app-title" content="{{theme.title}}">
         <meta name="theme-color" content="#b10438">
-        <meta name="application-name" content="{{theme.short_title}}">
+        <meta name="application-name" content="{{theme.title}}">
         <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#b10438">
         <link rel="apple-touch-icon" href= "/images/logo/app-icon-512.png">
         <link rel="apple-touch-icon" sizes="120x120" href="/images/logo/app-icon-120.png">
