add card for jobs

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -2,7 +2,7 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <link rel="stylesheet" href="/vendor/introjs/introjs.min.css" /> 
+        <link rel="stylesheet" href="/vendor/introjs/introjs.min.css" />
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -23,7 +23,7 @@
                         {{> "authentication/forms/login"}}
                         {{> "authentication/forms/demo-login"}}
                     </div>
-                    
+
                     <section class="card">
                         <div class="card-block">
                             <div class="intro" data-step="1" data-intro="Hier kannst du einen Überblick über die Vorteile der Arbeit mit der HPI Schul-Cloud einsehen. Außerdem erhälst du hier allgemeine Informationen über unser Projekt.">
@@ -56,7 +56,7 @@
                                     "slides": []
                                 }'>
                             </video-player>
-                            
+
 
                             <ul>
                                 <li>Mehr Informationen: <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/publikationen/projekte/schul-cloud_beschreibung_website.pdf" title="Initiates file download" target="_blank">Kurzbeschreibung "Die HPI Schul-Cloud" (.pdf)</a></li>
@@ -67,8 +67,7 @@
 
                             <h4>Ansatzpunkte der HPI Schul-Cloud</h4>
                             <p>Die Nutzung digitaler Medien und Lernmethoden stellt viele Schulen noch vor große Herausforderungen: veraltete Hard- sowie Software im abgeschlossenen Computerraum, fächverbindender Einsatz kaum möglich uvm.</p>
-                           
-                            
+
                             <h4>Die Grundidee der HPI Schul-Cloud</h4>
                             <p>Webbasierte Anwendungen sowie Rechenressourcen und Speichermöglichkeiten per Cloud Computing ermöglichen einen effizienten Zugriff auf zeitgemäße IT-Dienste für einen großen Kreis an Nutzer/innen.</p>
                             <p>Der spontane, bedarfsgerechte Einsatz in jedem beliebigen Unterrichtsfach wird dadurch erleichtert. Die aufwendige Installation von Software auf einzelnen Endgeräten der Nutzer/innen entfällt.</p>
@@ -104,7 +103,7 @@
                                     "slides": []
                                 }'>
                             </video-player>
-                            
+
                             <h4>Vorteile der HPI Schul-Cloud</h4>
                             <ul>
                                 <li>Zeit- und ortsunabhängiger Zugang zu einem großen Angebot an digitalen Lerninhalten</li>
@@ -149,12 +148,24 @@
                         <div class="card-block">
                             <h4 class="card-title">Newsletter</h4>
                             <div class="form-group">
-                                Alle Neuigkeiten rund um die HPI Schul-Cloud bequem in Ihrem Postfach: 
+                                Alle Neuigkeiten rund um die HPI Schul-Cloud bequem in Ihrem Postfach:
                             </div>
                             <a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" class="btn btn-block btn-primary">Newsletter abonnieren</a>
                         </div>
                     </section>
-                    
+
+                     <section id="jobs" class="card">
+                        <div class="card-block">
+                            <h4 class="card-title">Stellenausschreibungen</h4>
+                            <div class="form-group">
+                                Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
+                            </div>
+                            <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/frontend-web-developer-mwd-im-projekt-hpi-schul-cloud.html" rel="noopener" target="_blank">Frontend Web Developer</a></br>
+                            <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer</a></br>
+                            <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/community-manager-mwd-im-projekt-hpi-schul-cloud.html" rel="noopener" target="_blank">Community Manager</a>
+                        </div>
+                    </section>
+
                     <section id="partner" class="card">
                         <div class="card-block">
                             <h4 class="card-title">Projektdurchführung</h4>
