--- a/views/teams/forms/form-resend-invitation.hbs
+++ b/views/teams/forms/form-resend-invitation.hbs
@@ -1,3 +1,3 @@
 <div class="form-group">
-    <p>Hier kannst du die Einladung erneut versenden.</p>
+    <label for="invitation">Möchtest du die Einladung wirklich noch einmal per E-Mail zuschicken?</label>
 </div>
