rearranged and optimized for 24"

--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -107,6 +107,9 @@ body {
         }
     }
     aside{
+        .card-block {
+            padding: 1rem 1.25rem;
+        }
         .card-title{
             break-word: break-all;
         }
