SC-161-upgrade-webcomponents (#795)
* Change to updated Version of m.e.i.n.e.l
necessary webcomponents of m.e.i.n.e.l and video player are not compatible. Change in video-player and or m.e.i.n.e.l would be necessary  (won't fix)

* Update to video player 2.2.2
introducing of vendor-optimized source folder (no JavaScript optimization since it breaks already optimized files)

* About page contains video of Digital Gipfel 2018

* player 2.3.1 reduces preload date amount when videoPreload = false for MSE-based browsers

* Update test to find button

* Update to video-player version 2.3.2

--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -13,6 +13,7 @@
 
     {{#content "scripts" mode="append"}} 
         <script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
+        <script src="/scripts/video-player/load-video-player.js" type="text/javascript" defer></script>
         <script src="/scripts/about.js" type="text/javascript" defer></script>
     {{/content}}
 
