--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -1,9 +1,9 @@
 {{#content "styles" mode="append"}}
     <link rel="stylesheet" href="/styles/homework/overview.css"/>
-    <link rel="import" href="/vendor/m.e.i.n.e.l/circular-progress.html">
+    <link rel="import" href="/vendor/m.e.i.n.e.l/m.e.i.n.e.l.min.html">
 {{/content}}
 {{#content "scripts" mode="append"}}
-    <script src="/vendor/webcomponents-lite-meinel.js" defer></script>
+    <script src="/vendor/webcomponents-lite.js" defer></script>
     <script src="/scripts/moment/moment.js" defer></script>
     <script src="/scripts/filter/custom-element-polyfill.js" defer></script>
     <script src="/scripts/filter/feathers-filter.js" defer></script>
