some small things to get dev attention

--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -64,7 +64,7 @@
         Bei Bedarf kann auch eine Aufnahme in unseren Team-Messenger erfolgen.
         Wir freuen uns über Bugfixes und neue Funktionen. Mehr Infos gerne bei <a href="mailto:jan.renz@hpi.de">jan.renz@hpi.de</a> erfragen.
     </p>
-
+	<a name="jobs"></a>
     <h4>Stellenausschreibungen im Projekt Schul-Cloud</h4>
     <p>
         Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
