[WIP] SC-629-Innovationspreisträger & SC-630-Logo-Ausgezeichneter-Ort (#955)
* add Innovationspreisträger

* add Logo for "Ausgezeichneter Ort"

* replace low-resolution logo

--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -228,10 +228,27 @@
     </ul>
     <br/>
     <h4>Unsere Auszeichnungen</h4>
-    <p>Ernennung zum <a
-            href="https://hpi.de/pressemitteilungen/2017/schul-cloud-als-ausgezeichneter-ort-2017-praemiert.html"
-            target="_blank">„Ausgezeichneten Ort“</a> im bundesweiten Wettbewerb <a href="https://land-der-ideen.de"
-                                                                                    target="_blank">„Land der Ideen“</a>.
-    </p>
+    <div class="container embed-award">
+        <div class="row">
+            <div class="single-award col-xs-12 col-md-3">
+                <div class="single-award-wrapper">
+                    <a href="https://www.innovationspreis.de/preisträger-und-finalisten/preisträger/2018/" target="_blank">
+                        <b class="single-award-title">Preisträger im "Innovationspreis Berlin Brandenburg 2018"</b>
+                        <br/>
+                        <img class="single-award-thumbnail" src="/images/awards/Innovationspreisträger-180208.jpg" />
+                    </a>
+                </div>
+            </div>
+            <div class="single-award col-xs-12 col-md-3">
+                <div class="single-award-wrapper">
+                    <a href="https://hpi.de/pressemitteilungen/2017/schul-cloud-als-ausgezeichneter-ort-2017-praemiert.html" target="_blank">
+                        <b class="single-award-title">Ernennung zum „Ausgezeichneten Ort“ im bundesweiten Wettbewerb „Land der Ideen“</b>
+                        <br/>
+                        <img class="single-award-thumbnail" src="/images/awards/Land-der-Ideen-2017.jpg" />
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </section>
