--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -12,7 +12,7 @@
 		   \ \_\ \_\ \_\    /\_____\   \ `\____\ \____\\ \_\ \_\ \____/ /\____\/_____/ \ \____//\____\ \____/\ \____/\ \___,_\
 		    \/_/\/_/\/_/    \/_____/    \/_____/\/____/ \/_/\/_/\/___/  \/____/         \/___/ \/____/\/___/  \/___/  \/__,_ /
                                                                                                                                                                                            
-		Mit Node, React und Feathers verknüpfst du eher die Sprache Javascript als Englisch? Du suchst ein junges Team, lockere Atmosphäre und flache Hierarchien? Dann schau dir unsere Stellen an: http://localhost:3100/community#jobs
+		Mit Node, React und Feathers verknüpfst du eher die Sprache Javascript als Englisch? Du suchst ein junges Team, lockere Atmosphäre und flache Hierarchien? Dann schau dir unsere Stellen an: https://schul-cloud.org/community#jobs
 	-->
     {{#block "meta"}}
         <meta name="viewport" content="width=device-width, initial-scale=1">
