fix icon and add edit button

--- a/views/courses/courseGroup.hbs
+++ b/views/courses/courseGroup.hbs
@@ -49,10 +49,13 @@
                                         <p class="topic-label ml-1">{{{stripOnlyScript this.name}}}</p>
                                     
                                         <div class="right-btn-group">
-                                            <a class="delete-topic btn btn-sm" href="/courses/{{../courseId}}/topics/{{_id}}?courseGroup={{../_id}}" target="_blank" data-method="DELETE"
+                                            <a class="delete-topic btn btn-secondary btn-sm btn-icon-card" href="/courses/{{../courseId}}/topics/{{_id}}?courseGroup={{../_id}}" target="_blank" data-method="DELETE"
                                                 data-name="{{this.name}}" redirect="/courses/{{../courseId}}/groups/{{../_id}}">
                                                 <i class="fa fa-trash-o"></i>
                                             </a>
+											<a class="btn btn-secondary btn-sm 	btn-icon-card" href="/courses/{{../courseId}}/topics/{{_id}}/edit?courseGroup={{../_id}}" title="Thema bearbeiten">
+												<i class="fa fa-pencil"></i>
+											</a>
                                         </div>
                                     </div>
                                 </div>
