add information to the video of Digital-Gipfel

--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -16,6 +16,7 @@
 
     <div class="section-partner">
         <h4>Pilotschulen</h4>
+        <p>Best Practice: Auf dem Digitalgipfel 2019 in Nürnberg konnten alle Beteiligten digitalgestützen Unterricht mit der HPI Schul-Cloud live miterleben.</p>
         <video-player
             configuration='{
                 "streams" : [
