added new Tab link to all iFrames

--- a/views/courses/run-tool-local.hbs
+++ b/views/courses/run-tool-local.hbs
@@ -16,5 +16,6 @@
 
     {{#content "page"}}
         <iframe class="lti-frame" src="{{tool.url}}" frameborder="0" onload="setHeight()"></iframe>
+        <a href="{{tool.url}}" target="_blank" class="pull-right">in neuem Tab öffnen</a>
     {{/content}}
 {{/extend}}
