--- a/views/courses/run-lti.hbs
+++ b/views/courses/run-lti.hbs
@@ -16,6 +16,6 @@
 
     {{#content "page"}}
         <iframe class="lti-frame" src="/courses/{{course._id}}/tools/run/{{tool._id}}" frameborder="0" onload="setHeight()"></iframe>
-        <a href="/courses/{{course._id}}/tools/show/{{tool._id}}" target="_blank" class="pull-right">in neuem Tab öffnen</a>
+        <a href="/courses/{{course._id}}/tools/run/{{tool._id}}" target="_blank" class="pull-right">in neuem Tab öffnen</a>
     {{/content}}
 {{/extend}}
