--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -672,6 +672,9 @@ footer {
     .qr-show {
         padding: 15px;
         padding-bottom: 9px;
+        img {
+            max-width: none;
+        }
     }
 }
 
