--- a/views/topic/components/content-text.hbs
+++ b/views/topic/components/content-text.hbs
@@ -1,7 +1,7 @@
-<h4>{{title}}</h4>
+<h4>{{{stripOnlyScript title}}}</h4>
 
 <div class="row">
     <div class="col-md-6 col-sm-10 col-xs-12">
-        {{{content.text}}}
+        {{{stripOnlyScript content.text}}}
     </div>
 </div>
