--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -24,12 +24,14 @@
                 </div>
             </div>
 
+            {{#if rocketChatChannelName}}
             <section class="section-chat" style="margin-top: 2rem">
                 <h4>Chat</h4>
                 <div class="rocketchat">
                     <iframe src="http://dev-rocketchat.schul-cloud.org:3000/group/{{rocketChatChannelName}}?layout=embedded" frameborder="0"></iframe>
                 </div>
             </section>
+            {{/if}}
 
             <section class="section-members row">
                 <div class="col-sm-12">
