started ldap self-service

--- a/views/administration/systems.hbs
+++ b/views/administration/systems.hbs
@@ -13,9 +13,14 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
+                            <form action="/administration/systems/ldap/add" method="POST">
                             <button type="submit" class="btn btn-primary btn-add-modal">
                                 System hinzufügen
                             </button>
+                            <button type="submit" class="btn btn-primary">
+                                LDAP System hinzufügen
+                            </button>
+                            </form>
                         </div>
                     </div>
                 </div>
